fix: reduce images on mobile

--- a/packages/app/src/styles/components/welcome-page.css
+++ b/packages/app/src/styles/components/welcome-page.css
@@ -91,6 +91,10 @@
     }
     img {
       @apply mx-auto mb-5;
+
+      @media (max-width: 640px) {
+        @apply h-[180px];
+      }
     }
   }
   /*
